--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/font": "^14.2.5",
+    "dayjs": "^1.11.11",
     "next": "14.2.5",
+    "re-resizable": "^6.9.17",
     "react": "^18",
     "react-dom": "^18",
-    "react-draggable": "^4.4.6"
+    "react-draggable": "^4.4.6",
+    "react-live-clock": "^6.1.23-beta"
   },
   "devDependencies": {
     "@types/node": "^20",
