--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@next/font": "^14.2.5",
     "dayjs": "^1.11.11",
+    "framer-motion": "^11.3.8",
     "next": "14.2.5",
     "re-resizable": "^6.9.17",
     "react": "^18",
