--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@next/font": "^14.2.5",
+    "@reduxjs/toolkit": "^2.2.6",
     "dayjs": "^1.11.11",
     "framer-motion": "^11.3.8",
     "next": "14.2.5",
@@ -17,12 +18,15 @@
     "react": "^18",
     "react-dom": "^18",
     "react-draggable": "^4.4.6",
-    "react-live-clock": "^6.1.23-beta"
+    "react-live-clock": "^6.1.23-beta",
+    "react-redux": "^9.1.2",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/uuid": "^10.0.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "sass": "^1.77.8",
