--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@reduxjs/toolkit": "^2.2.6",
     "dayjs": "^1.11.11",
     "framer-motion": "^11.3.17",
-    "next": "14.2.5",
+    "next": "^14.2.13",
     "re-resizable": "^6.9.17",
     "react": "^18",
     "react-dom": "^18",
